--- a/Untitled1-Copy1.ipynb
+++ b/Untitled1-Copy1.ipynb
@@ -190,7 +190,8 @@
    "execution_count": 12,
    "id": "4b2cf801-fe03-433c-848b-f26e086bcaed",
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "tags": []
    },
    "outputs": [
     {
@@ -306,7 +307,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
