--- a/LSTM_Final.ipynb
+++ b/LSTM_Final.ipynb
@@ -144,10 +144,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "9347d021-a3a7-4e1d-a039-3985c34c9345",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0: 0.04780116304755211\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "stack expects each tensor to be equal size, but got [64, 2] at entry 0 and [43, 2] at entry 66",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [35]\u001b[0m, in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m train_datasets \u001b[38;5;241m=\u001b[39m dataset_paths\u001b[38;5;241m.\u001b[39mcopy()\n\u001b[1;32m      6\u001b[0m train_datasets\u001b[38;5;241m.\u001b[39mremove(path)\n\u001b[0;32m----> 7\u001b[0m \u001b[43mexperiment\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrain_datasets\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpath\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Input \u001b[0;32mIn [33]\u001b[0m, in \u001b[0;36mexperiment\u001b[0;34m(train_wells, test_well)\u001b[0m\n\u001b[1;32m     40\u001b[0m     ground_truth\u001b[38;5;241m.\u001b[39mappend(y[:, \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, :])\n\u001b[1;32m     41\u001b[0m     preds\u001b[38;5;241m.\u001b[39mappend(pred[:, \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, :])\n\u001b[0;32m---> 43\u001b[0m ground_truth \u001b[38;5;241m=\u001b[39m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstack\u001b[49m\u001b[43m(\u001b[49m\u001b[43mground_truth\u001b[49m\u001b[43m)\u001b[49m[:, \u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m     44\u001b[0m preds \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mstack(preds)[:, \u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m     45\u001b[0m \u001b[38;5;28mprint\u001b[39m(ground_truth\u001b[38;5;241m.\u001b[39mshape, preds\u001b[38;5;241m.\u001b[39mshape)\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: stack expects each tensor to be equal size, but got [64, 2] at entry 0 and [43, 2] at entry 66"
+     ]
+    }
+   ],
    "source": [
     "dataset_paths = ['data/dataset1/J10025.las', 'data/dataset1/J10035.las', 'data/dataset1/J10038.las', 'data/dataset1/J10039.las', 'data/dataset1/J10051.las']\n",
     "\n",
